--- a/2107.11497/manuscript.tex
+++ b/2107.11497/manuscript.tex
@@ -1,4 +1,19 @@
-\documentclass[aps,prl,twocolumn,10pt,superscriptaddress,nofootinbib,balancelastpage]{revtex4-1} 
+\documentclass[aps,prl,11pt,nofootinbib]{revtex4-1}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
 \usepackage[latin1]{inputenc}
 \usepackage{amsmath,amssymb}
 \usepackage{mathrsfs} 
@@ -19,6 +34,29 @@
 \setcounter{tocdepth}{5}%
 \newcommand{\subsubsubsection}{\paragraph}%
 \allowdisplaybreaks
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \newcommand{\Null}{\mathbf{0}}%
 \newcommand{\Eins}{\mathds{1}}%
@@ -91,7 +129,10 @@
 \begin{abstract}
 Cosmology relies on a coarse-grained description of the universe, assumed to be valid on large length scales. However, the nonlinearity of general relativity makes coarse-graining extremely difficult. We here address this problem by extending the Mori-Zwanzig projection operator formalism, a highly successful coarse-graining method from statistical mechanics, towards general relativity. Using the Buchert equations, we derive a new dynamic equation for the Hubble parameter which captures the effects of averaging through a memory function. This gives an empirical prediction for the cosmic jerk.
 \end{abstract}
+
 \maketitle
+
+\newpage
 
 General relativity \cite{Einstein1914,Einstein1915b,Einstein1916} is a highly successful theory which has been used to model the universe on many different scales. On the \ZT{microscopic} scale of individual stars and stellar black holes, it has been tested and confirmed to great accuracy by a large number of experiments, ranging from the gravitational deflection of light by the sun \cite{DysonED1920} to the recent direct detection of gravitational waves by the LIGO and Virgo collaborations \cite{Abbott2016,Abbott2016b}. However, we also use general relativity on \ZT{macroscopic} scales in cosmology, where we interpret it as a coarse-grained description of the universe on the average. 
 
@@ -218,7 +259,7 @@ We have used this best-fit value to numerically integrate \cref{differentialequa
 
 \begin{figure}
 \centering
-\includegraphics[width=\linewidth]{fig1}
+\includegraphics[width=4in]{fig1}
 \caption{\label{fig:1}Time evolution of scale factor $a(t)$, obtained by solving \cref{differentialequation}, for $\kappa_1/H_0^2 = 0$ (standard Friedmann equations) and $\kappa_1/H_0^2 = 0.078$ (extension with memory). We show only the expanding solution. Since \cref{differentialequation} is quadratic in $\dot{a}$, there exists a second solution that corresponds to a shrinking universe.}
 \end{figure} 
 
@@ -229,6 +270,7 @@ M.t.V.\ thanks Saul Perlmutter and Adam G.\ Riess for helpful discussions during
 S.H.\ and R.W.\ are funded by the Deutsche Forschungsgemeinschaft (DFG, German Research Foundation) -- grant numbers HO 2601/8-1 and WI 4170/3-1.
 
 
+\newpage
 \nocite{apsrev41Control}
 \bibliographystyle{apsrev4-1}
 \bibliography{refs,control}
