--- a/1806.01121/How_Electrons_Spin_-_arxiv_4.tex
+++ b/1806.01121/How_Electrons_Spin_-_arxiv_4.tex
@@ -1,5 +1,45 @@
 
-\documentclass[onecolumn,secnumarabic,amsmath,amssymb,balancelastpage,nofootinbib]{article}
+\documentclass[12pt,secnumarabic,amsmath,amssymb,balancelastpage,nofootinbib]{article}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \usepackage[e]{esvect}
 \usepackage{color}         % produces boxes or entire pages with colored backgrounds
@@ -26,31 +66,8 @@
 \usepackage[colorlinks=true]{hyperref}  % this package should be added after all others
 
 \setlength{\bibsep}{0 pt} %condense bibliography spacing
-\setstretch{1.3}
 \setlength{\skip\footins}{.75cm}
 
-%\usepackage{tikz}
-%\newcommand*\circled[1]{\tikz[baseline=(char.base)]{
-  %\node[shape=circle,draw,inner sep=2pt] (char) {#1};}}
-
-\addtolength{\oddsidemargin}{-.25in}
-\addtolength{\evensidemargin}{-.25in}
-\addtolength{\textwidth}{.5in}
-\addtolength{\topmargin}{-.75in}
-\addtolength{\textheight}{1.25in}
-	
-%\linespread{1.6}
-%\setlength{\skip\footins}{.75cm}
-
-
-\definecolor{darkred}{rgb}{0.6,0,0}
-\definecolor{darkgreen}{rgb}{0,0.5,0}
-\definecolor{darkblue}{rgb}{0,0,0.6}
-\hypersetup{ colorlinks,
-linkcolor=darkblue,
-filecolor=darkgreen,
-urlcolor=darkgreen,
-citecolor=darkred }
 
 \setlength{\tabcolsep}{12pt}
 \setlength{\bibsep}{4pt}
@@ -71,7 +88,7 @@ citecolor=darkred }
 %\numberwithin{equation}{section} %sets equation numbers <chapter>.<section>.<index>
 %\numberwithin{figure}{section}
 
-\title{\vspace*{-35 pt}\Huge{How Electrons Spin}}
+\title{\vspace*{-35 pt}{How Electrons Spin}}
 \author{Charles T. Sebens\\California Institute of Technology}
 \date{July 31, 2019\\arXiv v.4\\\vspace{10 pt}Forthcoming in \emph{Studies in History and Philosophy of Modern Physics}}
 
@@ -83,7 +100,8 @@ citecolor=darkred }
 There are a number of reasons to think that the electron cannot truly be spinning.  Given how small the electron is generally taken to be, it would have to rotate superluminally to have the right angular momentum and magnetic moment.  Also, the electron's gyromagnetic ratio is twice the value one would expect for an ordinary classical rotating charged body.  These obstacles can be overcome by examining the flow of mass and charge in the Dirac field (interpreted as giving the classical state of the electron).  Superluminal velocities are avoided because the electron's mass and charge are spread over sufficiently large distances that neither the velocity of mass flow nor the velocity of charge flow need to exceed the speed of light.  The electron's gyromagnetic ratio is twice the expected value because its charge rotates twice as fast as its mass.
 
 \end{abstract}
-\vspace*{12 pt}
+
+\newpage
 \tableofcontents
 \newpage
 
