--- a/2007.00619/PFMES_-_arxiv_v2.tex
+++ b/2007.00619/PFMES_-_arxiv_v2.tex
@@ -219,9 +219,9 @@ and move upwards with a velocity of
 \end{equation}
 
 \begin{figure}[p!]
-\center{\includegraphics[width=12cm]{SG1a.jpeg}}\\
-\center{\includegraphics[width=12cm]{SG1b.jpeg}}
-\caption{These plots show the initial current and force densities of $z$-spin up and $x$-spin up classical spherical electrons entering the magnetic field of the Stern-Gerlach experiment---\eqref{zupcurrentsphere}, \eqref{zupsphereforcedensity}, \eqref{xupcurrentsphere}, and \eqref{xupsphereforcedensity}.  Each plot shows the charge density as a uniform gray cloud and the aforementioned densities as arrows of varying sizes (plotted at points on a grid).  The arrows that you can see most clearly are near the surface as many are either partially or fully obscured by the cloud (reducing clutter).  In plotting the force densities, the variation in the magnetic field across the diameter of the electron has been exaggerated so that it is easy to see details like the force pulling the $z$-spin up electron upwards (visible on the right side of the first force density).}
+\center{\includegraphics[width=10cm]{SG1a.jpeg}}\\
+\center{\includegraphics[width=10cm]{SG1b.jpeg}}
+\caption{\small These plots show the initial current and force densities of $z$-spin up and $x$-spin up classical spherical electrons entering the magnetic field of the Stern-Gerlach experiment---\eqref{zupcurrentsphere}, \eqref{zupsphereforcedensity}, \eqref{xupcurrentsphere}, and \eqref{xupsphereforcedensity}.  Each plot shows the charge density as a uniform gray cloud and the aforementioned densities as arrows of varying sizes (plotted at points on a grid).  The arrows that you can see most clearly are near the surface as many are either partially or fully obscured by the cloud (reducing clutter).  In plotting the force densities, the variation in the magnetic field across the diameter of the electron has been exaggerated so that it is easy to see details like the force pulling the $z$-spin up electron upwards (visible on the right side of the first force density).}
   \label{SG1}
 \end{figure}
 
@@ -386,9 +386,9 @@ From the first term in the exponential, you can see that the center of the wave 
 
 
 \begin{figure}[p!]
-\center{\includegraphics[width=12cm]{SG2a.jpeg}}\\
-\center{\includegraphics[width=12cm]{SG2b.jpeg}}
-\caption{The first plot shows the probability density $\chi^{\dagger}\chi$ for the initial $z$-spin up wave function in \eqref{zupNRQM}, representing this density as a gray cloud of varying opacity.  The second plot shows the probability density at a later time, once the electron has passed through the magnetic field and its wave function has begun moving upwards.  The third plot shows the probability density for the $x$-spin up wave function in \eqref{xupNRQM}, which is identical to the probability density in the first plot.  The fourth plot shows the probability density at a later time, when the electron's wave function has split into two separate wave packets (one moving upwards and the other moving downwards).  Further embellishments (like the probability flux density) could be added to these plots, but here they are omitted to keep things simple.}
+\center{\includegraphics[width=10cm]{SG2a.jpeg}}\\
+\center{\includegraphics[width=10cm]{SG2b.jpeg}}
+\caption{\small The first plot shows the probability density $\chi^{\dagger}\chi$ for the initial $z$-spin up wave function in \eqref{zupNRQM}, representing this density as a gray cloud of varying opacity.  The second plot shows the probability density at a later time, once the electron has passed through the magnetic field and its wave function has begun moving upwards.  The third plot shows the probability density for the $x$-spin up wave function in \eqref{xupNRQM}, which is identical to the probability density in the first plot.  The fourth plot shows the probability density at a later time, when the electron's wave function has split into two separate wave packets (one moving upwards and the other moving downwards).  Further embellishments (like the probability flux density) could be added to these plots, but here they are omitted to keep things simple.}
   \label{SG2}
 \end{figure}
 
@@ -596,10 +596,10 @@ Because the dynamics are given by the Dirac equation, we can use our previous re
 has picked up an additional term pointing downward and representing the upward motion of the wave packet (the signs for current and overall motion being opposite because the electron is negatively charged).  We can determine the newly acquired upward velocity by dividing this new term in the current density \eqref{zupcurrentblobafter} by the charge density \eqref{zupchargeblob}.  This gives a velocity of $\frac{\mu \eta \Delta t}{m} \hat{z}$, as in \eqref{zvelocitysphere}.
 
 \begin{figure}[p!]
-\center{\includegraphics[width=12cm]{SG3a.jpeg}}\\
+\center{\includegraphics[width=10cm]{SG3a.jpeg}}\\
 \vspace*{-4pt}
-\center{\includegraphics[width=12cm]{SG3b.jpeg}}
-\caption{The first plot depicts a $z$-spin up electron in classical Dirac field theory, including a gray cloud representing the electron's charge density \eqref{zupchargeblob} and arrows depicting the flow of charge around the $z$ axis \eqref{zupcurrentblob}.  The second plot shows the density of force \eqref{zupforcedensityblob} on that electron when it enters the inhomogeneous magnetic field of the Stern-Gerlach apparatus.  As in figure \ref{SG1}, the variation of the magnetic field across the diameter of the electron is exaggerated so that you can easily see the upward force on the electron.  The third plot illustrates how the current density is altered \eqref{zupcurrentblobafter} by the electron spending time in the inhomogeneous magnetic field, picking up a downwards component corresponding to the upwards motion of the electron.  The fourth plot shows that electron at a later time, once it has moved a small distance upwards.}
+\center{\includegraphics[width=10cm]{SG3b.jpeg}}
+\caption{\small The first plot depicts a $z$-spin up electron in classical Dirac field theory, including a gray cloud representing the electron's charge density \eqref{zupchargeblob} and arrows depicting the flow of charge around the $z$ axis \eqref{zupcurrentblob}.  The second plot shows the density of force \eqref{zupforcedensityblob} on that electron when it enters the inhomogeneous magnetic field of the Stern-Gerlach apparatus.  As in figure \ref{SG1}, the variation of the magnetic field across the diameter of the electron is exaggerated so that you can easily see the upward force on the electron.  The third plot illustrates how the current density is altered \eqref{zupcurrentblobafter} by the electron spending time in the inhomogeneous magnetic field, picking up a downwards component corresponding to the upwards motion of the electron.  The fourth plot shows that electron at a later time, once it has moved a small distance upwards.}
   \label{SG3}
 \end{figure}
 
@@ -628,9 +628,9 @@ If the magnetic field were homogenous ($\eta=0$), the magnetic moment of the ele
 
 
 \begin{figure}[p!]
-\center{\includegraphics[width=12cm]{SG4a.jpeg}}\\
+\center{\includegraphics[width=10cm]{SG4a.jpeg}}\\
 \vspace*{-4pt}
-\center{\includegraphics[width=12cm]{SG4b.jpg}}
+\center{\includegraphics[width=10cm]{SG4b.jpg}}
 \caption{The first two plots show the density of charge, current, and force for an $x$-spin up electron entering the Stern-Gerlach magnetic field, \eqref{xupcurrentblob} and \eqref{xupforcedensityblob}.  The third plot depicts the jumbled current after the electron has spent some time in the magnetic field \eqref{xupcurrentblobafter}.  In the fourth plot, we see the electron at a later time when it has split into a $z$-spin up piece that is moving upwards and a $z$-spin down piece that is moving downwards.}
   \label{SG4}
 \end{figure}
