--- a/1403.0014/QMasCParxiv4.tex
+++ b/1403.0014/QMasCParxiv4.tex
@@ -103,7 +103,7 @@ i\hbar\frac{\partial}{\partial t}\Psi(\vv{x}_1,\vv{x}_2,...,t)
 =\left(\sum_k{\frac{-\hbar^2}{2 m_k}\nabla_k^2}+V(\vv{x}_1,\vv{x}_2,...,t)\right)\Psi(\vv{x}_1,\vv{x}_2,...,t)\ ,
 \label{schrod}
 \end{equation}
-where $\Psi$ is a function of particle configuration $(\vv{x}_1,\vv{x}_2,...)$ and time $t$, $m_k$ is the mass of particle $k$, $\nabla_k^2$ is the Laplacian with respect to $\vv{x}_k$, and $V$ is the classical potential energy of particle configuration $(\vv{x}_1,\vv{x}_2,...)$ at $t$.  When an observer performs a quantum measurement, the universal wave function enters a superposition of the observer seeing each possible outcome.  This is not to be understood as one observer seeing many outcomes, but as many observers each seeing a single outcome. Thus, the theory is not obviously inconsistent with our experience of measurements appearing to have unique outcomes.  According to Everettian quantum mechanics, there is nothing more than the wave function and therefore things like humans, measuring devices, and cats must be understood as being somehow composed of or arising out of wave function.  (\citealp{wallace2003, wallace2012} takes these things to be patterns or structures in the universal wave function.)  To summarize, here is what the Everettian QM says that there is (the ontology) and how it evolves in time (the dynamical laws).
+where $\Psi$ is a function of particle configuration $(\vv{x}_1,\vv{x}_2,...)$ and time $t$, $m_k$ is the mass of particle $k$, $\nabla_k^2$ is the Laplacian with respect to $\vv{x}_k$, and $V$ is the classical potential energy of particle configuration $(\vv{x}_1,\vv{x}_2,...)$ at $t$.  When an observer performs a quantum measurement, the universal wave function enters a superposition of the observer seeing each possible outcome.  This is not to be understood as one observer seeing many outcomes, but as many observers each seeing a single outcome. Thus, the theory is not obviously inconsistent with our experience of measurements appearing to have unique outcomes.  According to Everettian quantum mechanics, there is nothing more than the wave function and therefore things like humans, measuring devices, and cats must be understood as being somehow composed of or arising out of the wave function.  (\citealp{wallace2003, wallace2012} takes these things to be patterns or structures in the universal wave function.)  To summarize, here is what the Everettian QM says that there is (the ontology) and how it evolves in time (the dynamical laws).
 \vspace*{6 pt}\\\hspace*{1.2cm}\textbf{Ontology:} (I) universal wave function $\Psi(\vv{x}_1,\vv{x}_2,...,t)$
 \\\hspace*{1.2cm}\textbf{Law:} (I) Schr\"{o}dinger equation \eqref{schrod}
 \vspace*{6 pt}
@@ -113,7 +113,7 @@ A second option in responding to the measurement problem is to expand the ontolo
 \vv{v}_k(t)=\frac{\hbar}{m_k}\mbox{Im}\left[\frac{\vv{\nabla}_k\Psi(\vv{x}_1,\vv{x}_2,...,t)}{\Psi(\vv{x}_1,\vv{x}_2,...,t)}\right]\ .
 \label{guideq0}
 \end{equation}
-Experiments are guaranteed to have unique outcomes because humans and their scientific instruments are made of particles (not wave function).  These particles follow well-defined trajectories and are never in two places at once.  This theory is Bohmian mechanics, a.k.a.\ de Broglie-Bohm pilot wave theory.
+Experiments are guaranteed to have unique outcomes because humans and their scientific instruments are made of particles (not wave functions).  These particles follow well-defined trajectories and are never in two places at once.  This theory is Bohmian mechanics, a.k.a.\ de Broglie-Bohm pilot wave theory.
 \vspace*{6 pt}\\\hspace*{1.2cm}\textbf{Ontology:} (I) universal wave function $\Psi(\vv{x}_1,\vv{x}_2,...,t)$
 \\\hspace*{1.2cm}(II) particles with positions $\vv{x}_k(t)$ and velocities $\vv{v}_k(t)$
 \\\hspace*{1.2cm}\textbf{Laws:} (I) Schr\"{o}dinger equation \eqref{schrod}
