--- a/2108.07292/main.tex
+++ b/2108.07292/main.tex
@@ -1,12 +1,46 @@
-\documentclass[superscriptaddress]{revtex4-2}
-\usepackage{times,fancyhdr}
+\documentclass[12pt,superscriptaddress]{revtex4-2}
 \usepackage[dvips]{graphicx}
 \usepackage{amsmath,amssymb,bm}
 \usepackage{color}
 \usepackage{mathrsfs}
 \usepackage{setspace}
-\usepackage{hyperref}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 \def\beq{\begin{equation}}
 \def\eeq{\end{equation}}
 \def\beqn{\begin{eqnarray}}
@@ -43,10 +77,11 @@ Bell's theorem is often said to imply that quantum mechanics violates local caus
 
 \maketitle
 
+\newpage
 
 \section{Introduction}
 \label{intro}
-Bell's theorem \cite{Bell1964OnEPR} has been a milestone in our understanding of quantum mechanics by detailing just what correlations are necessary to reproduce observations. Unfortunately, many physicists have jumped to incorrect conclusions from it. A 2016 survey among professional physicists \cite{Sujeevan2016Survey} found that 34\% believe Bell's theorem shows that ``Hidden variables are impossible,'' that is, they think Bell's theorem rules out theories in which measurement outcomes are determined by variables that are not accounted for in standard quantum mechanics. Similarly, in a survey conducted among professional quantum physicists at a conference in 2012 \cite{Schlosshauer2013Attitudes}, 64\% claimed that Bell's theorem rules out hidden variable theories (and said local realism is untenable). This is of course not so. Bell's theorem merely shows that a hidden variables theory {\emph{which fulfils all the assumptions of the theorem}} is ruled out by observation.
+Bell's theorem \cite{Bell1964OnEPR} has been a milestone in our understanding of quantum mechanics by detailing just what correlations are necessary to reproduce observations. Unfortunately, many physicists have jumped to incorrect conclusions from it. A 2016 survey among professional physicists \cite{Sujeevan2016Survey} found that 34\% believe Bell's theorem shows that ``Hidden variables are impossible,'' that is, they think Bell's theorem rules out theories in which measurement outcomes are determined by variables that are not accounted for in standard quantum mechanics. Similarly, in a survey conducted among professional quantum physicists at a conference in 2012 \cite{Schlosshauer2013Attitudes}, 64\% claimed that Bell's theorem rules out hidden variable theories (and said local realism is untenable). This is of course not so. Bell's theorem merely shows that a hidden variables theory {\emph{which fulfills all the assumptions of the theorem}} is ruled out by observation.
 
 Bell's theorem however contains one questionable assumption: Statistical Independence, sometimes called the ``Free Will'' or ``Free Choice'' assumption (here capitalised to distinguish it from the intuitive ideas of statistical independence, free will and free  choice).
 Indeed, one can interpret \emph{all} experiments that have found violations of Bell's inequality as simply demonstrating that if quantum mechanics is underpinned by a local, causal, and deterministic theory, then that underlying theory must violate Statistical Independence. Clearly the conclusion to draw from this is that we should look for a hidden-variables theory that violates Statistical Independence, not least to develop a quantum formalism that is compatible with General Relativity. 
