--- a/1912.06462/sd16.tex
+++ b/1912.06462/sd16.tex
@@ -45,11 +45,8 @@ bookmarksopenlevel=10
 %\usepackage[top=4cm, bottom=4cm, left=3.5cm, right=3.5cm]{geometry}
 
 
-\pagestyle{fancy}
-\fancyhead[RO,RE]{Rethinking Superdeterminism}
-%\fancyhead[CO,CE]{Draft \today}
-\fancyhead[LO,LE]{{\sl Hossenfelder, Palmer}}
-%\fancyfoot[RO, LE] {\thepage}
+\pagestyle{plain}
+
 
 \def\beq{\begin{equation}}
 \def\eeq{\end{equation}}
