--- a/1206.3116/1206.3116-psu.tex
+++ b/1206.3116/1206.3116-psu.tex
@@ -42,8 +42,8 @@ bookmarksopenlevel=10
 
 \begin{document}
 
-\def\vac{| 0 >}
-\def\leftvac{< 0 |}
+\def\vac{| 0 \rangle}
+\def\leftvac{\langle 0 |}
 \def\C{\mathbb C}
 \def\R{\mathbb R}
 \def\S{\mathbb S}
@@ -363,16 +363,16 @@ of the CR (\ref{M}) to prove that the spectrum of $M_z$ in any irreducible (fini
 $SU(2)$ has the form
 \begin{equation}
 \label{Mz}
-(M_z - m\hbar) |j, m> = 0\,, \ \ m = -j, 1-j, \dots ,j-1, j\,,\ \ \ j = 0, \frac{1}{2}, 1, \frac{3}{2}, \dots \ .
+(M_z - m\hbar) |j, m\rangle = 0\,, \ \ m = -j, 1-j, \dots ,j-1, j\,,\ \ \ j = 0, \frac{1}{2}, 1, \frac{3}{2}, \dots \ .
 \end{equation}
 (b) Use the relation
 \begin{equation}
 \label{M2}
 {\bf M}^2 = M_z^2 +\frac{1}{2}(M_+ M_- + M_- M_+) = M_z^2 + \hbar M_z + M_+M_-
 \end{equation}
-to prove that $({\bf M}^2 - j(j+1)\hbar^2)|j, m> = 0$. 
+to prove that $({\bf M}^2 - j(j+1)\hbar^2)|j, m\rangle = 0$. 
 
-({\it Hint}: use the relation $M_- |j, -j> = 0 (= M_+|j, j>)$.)
+({\it Hint}: use the relation $M_- |j, -j\rangle = 0 (= M_+|j, j\rangle)$.)
 
 In general, however, there is no ``optimal algorithm'' to quantize a given
 classical system. That's why it is often said that {\it quantization is an art}\footnote{Words Ludwig Faddeev used in the discussion after Witten's talk on \cite{GW} in Lausanne, March, 2009, alluding to the Lax ordering in the quantization of integrable systems \cite{F}. A year later Witten's student used the same words as a title of Sect. 2 of \cite{G10}.} Here are three examples in which {\it we know}
@@ -595,7 +595,7 @@ structure for $n = 2$.
 y^2}
 \end{equation}
 in the punctured plane ${\mathbb C}^* = \{z=x+iy, \, (x,y)\in{\mathbb R}^2; \,
-r^2:= x^2 + y^2 > 0\}$ is closed but not exact, albeit locally, around any non-zero
+r^2:= x^2 + y^2 \rangle 0\}$ is closed but not exact, albeit locally, around any non-zero
 point $(x, y)$, it can be written as a differential of a multivalued function,
 \begin{equation}
 \label{dphi}
@@ -1035,7 +1035,7 @@ the equation  $\bar D \Psi = 0$ is
 norm square
 \begin{equation}
 \label{Knorm}
-||\Psi||^2 = \int |\psi(z)|^2 exp(-\frac{K}{\hbar})d^{2n}z < \infty \, \,
+||\Psi||^2 = \int |\psi(z)|^2 exp(-\frac{K}{\hbar})d^{2n}z \langle  \infty \, \,
 (d^{2n}z \sim \omega^n). 
 \end{equation}
 The Hilbert space ${\mathcal B}(= {\mathcal B}_n)$ of such entire functions 
@@ -1058,7 +1058,7 @@ Identify ${\mathcal B}_n$ with the Fock space of n creation and n annihilation
 operators with vacuum vector given by (\ref{Psi}) with $\psi(z) = 1$:
 \begin{equation}
 \label{vac}
-\vac = exp(-\frac{K}{2\hbar}), \, \, a_i\vac = 0 = <0|\, a_j^*.
+\vac = exp(-\frac{K}{2\hbar}), \, \, a_i\vac = 0 = \langle 0|\, a_j^*.
 \end{equation} 
 
 {\it Remark 3.1} Recalling the change of variables (\ref{zpq}) we observe that the quantum harmonic oscillator Hamiltonian $H_0$ corresponds to the symmetrized product
@@ -1429,11 +1429,11 @@ either $p$ or $x$ it gives the standard quantum mechanical (positive) probabilit
 \begin{equation}
 \int F(x, p)dp = |\psi(x)|^2.
 \end{equation}
-Raymond Stora (private communication) has proposed another simple formula for the quasi-probability distribution $F = F_\rho$ corresponding to a (positive) density operator $\rho$ and a pair of (normalized) eigenstates $|\alpha>, |\beta>$ labelled by the eigenvalues of two (in general, non-commuting) hermitean operators which also satisfies these relations:
+Raymond Stora (private communication) has proposed another simple formula for the quasi-probability distribution $F = F_\rho$ corresponding to a (positive) density operator $\rho$ and a pair of (normalized) eigenstates $|\alpha\rangle, |\beta\rangle$ labelled by the eigenvalues of two (in general, non-commuting) hermitean operators which also satisfies these relations:
 \begin{eqnarray}
 \label{Stor}
-F_\rho (\alpha, \beta) = \frac{1}{2}(<\alpha|\beta><\beta|\rho|\alpha> + <\alpha|\rho|\beta><\beta|\alpha>);
-\sum_\beta F_\rho (\alpha, \beta) = <\alpha|\rho|\alpha>.
+F_\rho (\alpha, \beta) = \frac{1}{2}(\langle\alpha|\beta\rangle \langle\beta|\rho|\alpha\rangle + \langle \alpha|\rho|\beta\rangle \langle\beta|\alpha \rangle);
+\sum_\beta F_\rho (\alpha, \beta) = \langle \alpha|\rho|\alpha \rangle.
 \end{eqnarray}
 This formula applies to operators like spin projections on two orthogonal axes whose eigenvalues do not belong to an affine space, so that Wigner's expression (\ref{Wigner}) would not make sense. The appearance of negative probability is a common feature of all quasi-probability distributions consistent with Bell's theorem\footnote{For a ``probabilistic opposition'' to the ussual interpretation of Bell's theorem - see \cite{Kh}.} (as discussed in \cite{M86} and \cite{SR} among others). The first to consider negative probabilities (in the context of quantum theory) was none other than Dirac. In his Bakerian lecture \cite{D42} (p. 8) he stated ``Negative energies and probabilities should not be considered as nonesense. They are well defined concepts mathematically, like a negative sum of money...'' The Wigner transform has the extra property to be inverse to Weyl's which, in turn, is related to Weyl's (symmetric) ordering. There is, however, nothing sacred about such an ordering (or about any other ordering, for that matter). As mentioned earlier - see footnote 16 - Lax ordering naturally appears instead of Weyl's in the quantization of some integrable systems.}
 
@@ -1621,18 +1621,18 @@ Here is a toy example of a bosonic Fock space presented by Bernard Julia to the 
 Number Theory and Physics, which served a starting point of an interesting
 mathematical development \cite{BC} (which is still continuing, \cite{CC}).
 One introduces (Bose) creation and annihilation operators $a_p^{(*)}$, corresponding to the prime numbers, $p=2, 3, 5, \\
- 7, 11, ...$. The 1-particle state space is spanned by (unit) vectors $|p>$ corresponding to the primes while the Fock 
-space $\mathcal{F}$ is spanned by vectors $|n>$ corresponding to all positive integers:
+ 7, 11, ...$. The 1-particle state space is spanned by (unit) vectors $|p\rangle$ corresponding to the primes while the Fock 
+space $\mathcal{F}$ is spanned by vectors $|n\rangle$ corresponding to all positive integers:
 \begin{equation}
 \label{JBC}
-|vac>\equiv |1>\,, \ \ |n> = \frac{\prod(a_i^*)^{n_i}}{\prod(n_i!)^{\frac{1}{2}}}
-|1> \ \ {\rm for} \ \ n = \prod (p_i)^{n_i}\,.
+|vac\rangle\equiv |1\rangle\,, \ \ |n\rangle = \frac{\prod(a_i^*)^{n_i}}{\prod(n_i!)^{\frac{1}{2}}}
+|1\rangle \ \ {\rm for} \ \ n = \prod (p_i)^{n_i}\,.
 \end{equation}
-Thus the vacuum corresponds to the number 1; the states $|4=2^2>, |6=2\times 3>, |9>, |14>, ...$ are 2-particle states etc.
-The {\it number operator} $N$ such that $(N-n)|n> = 0$ acts multiplicatively on product states:
+Thus the vacuum corresponds to the number 1; the states $|4=2^2\rangle, |6=2\times 3\rangle, |9\rangle, |14\rangle, ...$ are 2-particle states etc.
+The {\it number operator} $N$ such that $(N-n)|n\rangle = 0$ acts multiplicatively on product states:
 \begin{equation}
 \label{N}
-N:= \prod_p p^{a^*_p a_p} \ \ \Rightarrow N|p_1...p_k> = p_1...p_k |p_1...p_k>\,.
+N:= \prod_p p^{a^*_p a_p} \ \ \Rightarrow N|p_1...p_k\rangle = p_1...p_k |p_1...p_k\rangle\,.
 \end{equation}
 
 If one introduces furthermore a logarithmic Hamiltonian that is additive on 
