--- a/1206.3116/1206.3116-psu.tex
+++ b/1206.3116/1206.3116-psu.tex
@@ -1620,8 +1620,8 @@ unitary map (built out of tensor products of $U$'s).
 Here is a toy example of a bosonic Fock space presented by Bernard Julia to the 1989 Les Houches Winter School on
 Number Theory and Physics, which served a starting point of an interesting
 mathematical development \cite{BC} (which is still continuing, \cite{CC}).
-One introduces (Bose) creation and annihilation operators $a_p^{(*)}$, corresponding to the prime numbers, $p=2, 3, 5, \\
- 7, 11, ...$. The 1-particle state space is spanned by (unit) vectors $|p\rangle$ corresponding to the primes while the Fock 
+One introduces (Bose) creation and annihilation operators $a_p^{(*)}$, corresponding to the prime numbers, $p=2, 3, 5, 
+ 7, 11, ...$ . The 1-particle state space is spanned by (unit) vectors $|p\rangle$ corresponding to the primes while the Fock 
 space $\mathcal{F}$ is spanned by vectors $|n\rangle$ corresponding to all positive integers:
 \begin{equation}
 \label{JBC}
