--- a/1902.01930/Electromagnetism_as_Quantum_Physics_-_arxiv_v3.tex
+++ b/1902.01930/Electromagnetism_as_Quantum_Physics_-_arxiv_v3.tex
@@ -1,5 +1,5 @@
 
-\documentclass[onecolumn,secnumarabic,amsmath,amssymb,balancelastpage,nofootinbib]{article}
+\documentclass[12pt,secnumarabic,amsmath,amssymb,balancelastpage,nofootinbib]{article}
 
 \usepackage[e]{esvect}
 \usepackage{color}         % produces boxes or entire pages with colored backgrounds
@@ -23,33 +23,48 @@
 
 \usepackage[none]{hyphenat} % removes hyphenation
 
-\usepackage[colorlinks=true]{hyperref}  % this package should be added after all others
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
-\setlength{\bibsep}{0 pt} %condense bibliography spacing
-\setstretch{1.3}
-\setlength{\skip\footins}{.75cm}
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
 
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 %\usepackage{tikz}
 %\newcommand*\circled[1]{\tikz[baseline=(char.base)]{
   %\node[shape=circle,draw,inner sep=2pt] (char) {#1};}}
-
-\addtolength{\oddsidemargin}{-.25in}
-\addtolength{\evensidemargin}{-.25in}
-\addtolength{\textwidth}{.5in}
-\addtolength{\topmargin}{-.75in}
-\addtolength{\textheight}{1.25in}
-	
-%\linespread{1.6}
-%\setlength{\skip\footins}{.75cm}
-
-\definecolor{darkred}{rgb}{0.6,0,0}
-\definecolor{darkgreen}{rgb}{0,0.5,0}
-\definecolor{darkblue}{rgb}{0,0,0.6}
-\hypersetup{ colorlinks,
-linkcolor=darkblue,
-filecolor=darkgreen,
-urlcolor=darkgreen,
-citecolor=darkred }
 
 \setlength{\tabcolsep}{12pt}
 \setlength{\bibsep}{6pt}
@@ -80,7 +95,7 @@ citecolor=darkred }
 One can interpret the Dirac equation either as giving the dynamics for a classical field or a quantum wave function.  Here I examine whether Maxwell's equations, which are standardly interpreted as giving the dynamics for the classical electromagnetic field, can alternatively be interpreted as giving the dynamics for the photon's quantum wave function.  I explain why this quantum interpretation would only be viable if the electromagnetic field were sufficiently weak, then motivate a particular approach to introducing a wave function for the photon (following Good, 1957).  This wave function ultimately turns out to be unsatisfactory because the probabilities derived from it do not always transform properly under Lorentz transformations.  The fact that such a quantum interpretation of Maxwell's equations is unsatisfactory suggests that the electromagnetic field is more fundamental than the photon.
 \end{abstract}
 
-
+\newpage
 \tableofcontents
 \newpage
 
@@ -836,7 +851,7 @@ Bialynicki-Birula, Iwo. 1996.
 \bibitem[\protect\citename{Bialynicki-Birula \& Bialynicka-Birula,
   }2013]{bb2013}
 Bialynicki-Birula, Iwo, \& Bialynicka-Birula, Zofia. 2013.
-\newblock The Role of the Riemann€-Silberstein Vector in Classical and Quantum
+\newblock The Role of the Riemann--Silberstein Vector in Classical and Quantum
   Theories of Electromagnetism.
 \newblock {\em Journal of Physics A: Mathematical and Theoretical}, {\bf
   46}(5), 053001.
@@ -937,7 +952,7 @@ Fleming, Gordon, \& Butterfield, Jeremy. 1999.
 
 \bibitem[\protect\citename{Fraser, }2008]{fraser2008}
 Fraser, Doreen. 2008.
-\newblock The Fate of `€˜Particles'€™ in Quantum Field Theories with
+\newblock The Fate of ``Particles'' in Quantum Field Theories with
   Interactions.
 \newblock {\em Studies in History and Philosophy of Modern Physics}, {\bf
   39}(4), 841--859.
