--- a/1806.01121/How_Electrons_Spin_-_arxiv_4.tex
+++ b/1806.01121/How_Electrons_Spin_-_arxiv_4.tex
@@ -311,7 +311,7 @@ This factor of two between the mass and charge velocity is a general feature of 
 The mass and charge are both localized in a Gaussian wave packet of width $d$.  The reason for calling this a single electron state is that the integral of the charge density over all of space is $-e$.\footnote{See \citet[pg.\ 10]{takabayasi1957}.}
 
 
-\begin{figure}[htb]
+\begin{figure}[p]
 \center{\includegraphics[width=9.5 cm]{flows3.jpg}}
 \caption{These plots depict the flow of mass and charge for the state of an electron at rest given in \eqref{ohanianstate}.  The first two plots give the momentum density \eqref{momex} and mass velocity \eqref{massvel}.  The second two plots give the magnetization current density \eqref{magcurrent} and the corresponding contribution to the charge velocity \eqref{chargevel} (for the corrected state \eqref{approxstate}, these plots give the total charge current density and charge velocity).  The two velocity plots use the same scale to highlight that the charge velocity is twice the mass velocity.}
 \label{flows}
