--- a/1212.6543/it.tex
+++ b/1212.6543/it.tex
@@ -1,12 +1,46 @@
-\documentclass{article}
+\documentclass[12pt]{article}
 
 \usepackage[all]{xy}
 
-\usepackage[text={156mm,244mm},centering]{geometry}
-\newlength{\colsep}
-\setlength{\colsep}{4ex}
-\usepackage{multicol}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.5in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 \usepackage{titlesec}
 \titleformat*{\section}{\large\bfseries}
 \titleformat*{\subsubsection}{\bfseries}
@@ -47,9 +81,7 @@ urlcolor=myurlcolor}
 \sloppy
 \maketitle
 
-\setlength{\columnsep}{1\colsep}
-
-\begin{figure*}[b]
+\begin{figure*}[t]
 \centering
 \begin{tabular}{|rl|}
 \hline
@@ -85,11 +117,9 @@ concepts.}
 \label{fig:axioms}
 \end{figure*}
 
-\begin{multicols}{2}
-
 \begin{trivlist}\item%
 \centering%
-\parbox{.4\textwidth}{%
+\parbox{.6\textwidth}{%
 \itshape
 As mathematicians, we often read a nice new proof of a known theorem, enjoy
 the different approach, but continue to derive our internal understanding
@@ -98,7 +128,7 @@ drastically the way mathematicians think [\ldots] and teach.%
 }
 \end{trivlist}
 % 
----Sheldon Axler~\cite[Section 10]{AxleDWD}.
+\hfil---Sheldon Axler~\cite[Section 10]{AxleDWD}.
 
 \vspace{2em}\noindent
 Mathematicians manipulate sets with confidence almost every day of their
@@ -232,19 +262,20 @@ is uniquely determined by the value of $f(\bullet) \in X$
 \bam{Elements are a special case of functions.}
 
 \begin{figure*}
-\setlength{\unitlength}{1mm}
+\begin{center}
+\setlength{\unitlength}{.8mm}
 \begin{picture}(155,26)(0,-6)
-\put(0,0){\includegraphics[width=48\unitlength]{loop.pdf}}
+\put(0,0){\includegraphics[width=30\unitlength]{loop.pdf}}
 \put(5,-3.5){$S^1$}
 \put(33,-3.5){$X$}
 \put(18,-8){(a)}
 % 
-\put(60,0){\includegraphics[width=45\unitlength]{line.pdf}}
+\put(60,0){\includegraphics[width=30\unitlength]{line.pdf}}
 \put(69,-3.5){$\reals$}
 \put(96,-3.5){$\reals^n$}
 \put(81,-8){(b)}
 % 
-\put(119.5,0.5){\includegraphics[width=37\unitlength]{element.pdf}}
+\put(119.5,0.5){\includegraphics[width=30\unitlength]{element.pdf}}
 \put(120.5,-3){$\One$}
 \put(144,-3){$X$}
 \put(132,-8){(c)}
@@ -252,6 +283,8 @@ is uniquely determined by the value of $f(\bullet) \in X$
 \caption{Mapping out of a basic object ($S^1$, $\reals$, or $\One$) picks out
 figures of the appropriate type (loops, lines, or elements).}
 \label{fig:elements}
+\end{center}
+
 \end{figure*}
 
 
@@ -1068,7 +1101,5 @@ Edinburgh EH9 3JZ,
 United Kingdom.\\
 % \ \\
 Tom.Leinster\mbox{}@\mbox{}ed\dt ac\dt uk
-
-\end{multicols}
 
 \end{document}
