--- a/1212.6543/it.tex
+++ b/1212.6543/it.tex
@@ -23,6 +23,7 @@ bookmarksopenlevel=10
 \sloppy
 \raggedbottom
 \pagestyle{plain}
+\usepackage{eulervm}
 
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/cmrsum}
