--- a/2003.12683/dirac_path_v1.tex
+++ b/2003.12683/dirac_path_v1.tex
@@ -868,7 +868,7 @@ Notes in Physics, Number 159, Springer-Verlag 1982.
 (1948)
 \bibitem{nobel} Feynman's Nobel acceptance lecture (1965).
 \bibitem{joking} R.P. Feynman, {\it Surely You are Joking, Mr Feynman!}, Vintage Publishers, 1992.
-\bibitem{diracpaper} P.A.M. Dirac, {\it Lagrangian in Quantum Mechanics}, 
+\bibitem{diracpaper} P.A.M. Dirac, {\it The Lagrangian in Quantum Mechanics}, 
 Physikalische Zeitschrift der Sowjetunion, Band 3, Heft 1 (1933),
 \bibitem{thesis} L.M. Brown(Ed) {\it Feynman's Thesis - A New Approach to Quantum Theory}, World Scientific, 2005. This single
 resource contains Feynman's Thesis {\it The Principle of Least Action in Quantum Mechanics}, his paper as well as Dirac's Lagrangian in Quantum Mechanics paper.
